--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,22 +2,22 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Every day at midnight
-  workflow_dispatch:
+    - cron: "0 0 * * *"  # runs every day at midnight UTC
+  workflow_dispatch:     # allows manual run from GitHub UI
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Generate snake.svg
+      - name: Generate snake animation SVG
         uses: Platane/snk@v3
         with:
           github_user_name: hamna-ali
           outputs: |
             ./output/github-contribution-grid-snake.svg
 
-      - name: Push snake.svg to the output branch
+      - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
